[package]
name = "m3u_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
enum-extract-error = "0.1.1"
enum-extract-macro = "0.1.1"
regex = "1.11.1"
regex_static = "0.1.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
ureq = "2.12.1"
